--- a/components/HomeCategory/style.module.css
+++ b/components/HomeCategory/style.module.css
@@ -20,7 +20,7 @@
 }
 .category_cards .card:hover h2{
     cursor: pointer;
-    color: rgb(0, 117, 159);
+    color: rgb(11, 176, 235);
 }
 
 .category_cards .card h2{
